--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= javascript_include_tag 'application' %>
 	</head>
 	<body>
-<!-- NEW HEADER STARTS HERE -->
+<!-- FIRST HEADER-everyone gets this -->
 <div class="navbar navbar-default">
   <div class="container-fluid">
 
@@ -52,42 +52,24 @@
     </p>  
 
   </div>
-      <!-- TODO Here is where we render role specific nav bar -->
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <span class="navbar-brand">Educaiton Studies Dashboard</span>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><%= link_to("Advisees", students_path) %></li>
-      <li class="active"><%= link_to("Praxis Registration", new_praxis_result_path) %></li>
-      <li class = "dropdown active">        
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Admissions/Exit <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><%= link_to("Admission to TEP", adm_tep_index_path) %></li>
-          <li><%= link_to("Admission to Student Teaching", adm_st_index_path) %></li>
-          <li><%= link_to("Program Exits", prog_exits_path) %></li>
-        </ul>
-      </li>
+    <!-- TODO Here is where we render role specific nav bar -->
+    <% if session[:role] == "admin" and session[:view_as].blank? %>
+      <%= render :partial => "admin_navbar" %>
 
-      <li class="dropdown active">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Field Experience <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><%= link_to("Clinical Placements", clinical_assignments_path) %></li>
-          <li><%= link_to("Clinical Teachers", 
-          clinical_teachers_path) %></li>
-          <li><%= link_to("Clinical Sites", 
-          clinical_sites_path) %></li>
-        </ul>
-      </li>
-    </ul>
+    <% elsif session[:role] == "advisor" or session[:view_as] == Role.where(RoleName: "advisor").first.idRoles %>
+      <%= render :partial => "advisor_navbar" %>
 
-  </div>
+    <% elsif session[:role] == "staff" or session[:view_as] == Role.where(RoleName: "staff").first.idRoles %>
+      <%= render :partial => "staff_navbar" %>
 
+    <% elsif session[:role] == "student labor" or session[:view_as] == Role.where(RoleName: "student labor").first.idRoles %>
+      <%= render :partial => "stu_labor_navbar" %>
+
+    <% end %>
 </div>
 
 		<!--Before yield -->
     <%= params %> <br>
-    <%= session[:view_as]  %>
       <% if !flash[:notice].blank? %>
         <div class="notice">
           <%= flash[:notice] %>
