--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         Viewing Site As:
       <% end %>
 
-      <%= form_tag("/access/change_psudo_status") %>
+      <%= form_tag("/access/change_psudo_status") do -%>
         <p class="navbar-text pull-left">
         <%= select_tag "view_as", 
             options_for_select(
@@ -38,7 +38,8 @@
               :onchange => "this.form.submit()"}
            %>
         </p>
-
+      <% end -%>
+  
     <% end %>
 
     <p class="navbar-text pull-right">
