finding @issues in controller

--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -26,7 +26,7 @@
                 <th>Status</th>
               </tr>
 
-              <% @student.issues.sorted.each do |issue| %>
+              <% @issues.each do |issue| %>
 
               <tr>
                 <td> <%= issue.Name %></td>
