fixed syntax in index view

--- a/app/views/prog_exits/index.html.erb
+++ b/app/views/prog_exits/index.html.erb
@@ -89,7 +89,7 @@
           locals: {
             :record_id => exit.AltID,
             :popover_title => "Exit Details", 
-            :button_title => "Details"
+            :button_title => "Details",
             :content => exit.Details
           } )  %>
 
