fixed link and button copy

--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -13,8 +13,8 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-1 pull-right">
-                    <%= link_to new_clinical_assignment_path, :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>  
-                        <span class="large-btn-text">New Assignment</span>
+                    <%= link_to new_issue_path, :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>  
+                        <span class="large-btn-text">New Issue</span>
                     <% end %>         
                   </div>
                 </div>
