fixed link into issues#new to pass in AltID

--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -13,7 +13,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-1 pull-right">
-                    <%= link_to new_issue_path, :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>  
+                    <%= link_to new_student_issue_path(@student.AltID), :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>  
                         <span class="large-btn-text">New Issue</span>
                     <% end %>         
                   </div>
