--- a/app/views/clinical_teachers/index.html.erb
+++ b/app/views/clinical_teachers/index.html.erb
@@ -24,35 +24,34 @@
       <th>Years Experience</th>
     </tr>
     <% @teachers.each do |teacher| %>
-	  <td><%= teacher.FirstName%></td>
-	  <td><%= teacher.LastName %></td>
-	  <td><%= mail_to teacher.Email%></td>
-	  <td><%= teacher.Subject %> </td>
-	  <td><%= teacher.Bnum %></td>
-	  <td><%= teacher.Rank %></td>
-	  <td><%= teacher.YearsExp %></td>
-    <td class="actions">
+      <% if can? :read, teacher %>
+    	  <td><%= teacher.FirstName%></td>
+    	  <td><%= teacher.LastName %></td>
+    	  <td><%= mail_to teacher.Email%></td>
+    	  <td><%= teacher.Subject %> </td>
+    	  <td><%= teacher.Bnum %></td>
+    	  <td><%= teacher.Rank %></td>
+    	  <td><%= teacher.YearsExp %></td>
+        <td class="actions">
 
-    	<!-- actions:
-    	 	edit teacher
-    	 	see assignments-->
+        	<!-- actions:
+        	 	edit teacher
+        	 	see assignments-->
 
-		<!-- edit teacher -->
-      <%= link_to(edit_clinical_teacher_path(teacher.id), :class => "btn btn-info action-small") do %>
-        <span class="small-btn-text"> Edit</span>
+    		<!-- edit teacher -->
+          <%= link_to(edit_clinical_teacher_path(teacher.id), :class => "btn btn-info action-small") do %>
+            <span class="small-btn-text"> Edit</span>
+          <% end %>
+
+    		<!-- see assignments -->
+
+    		<!-- example -->
+            <%# link_to edit_clinical_site_path(site.id), :class => "btn btn-info action-small" do %>
+                  <!-- <span class="small-btn-text">Edit</span> -->
+                <%# end %>
+
+          </td>
+        </tr>
       <% end %>
-
-		<!-- see assignments -->
-
-		<!-- example -->
-        <%# link_to edit_clinical_site_path(site.id), :class => "btn btn-info action-small" do %>
-              <!-- <span class="small-btn-text">Edit</span> -->
-            <%# end %>
-
-
-
-
-      </td>
-    </tr>
     <% end %>
   </table>
