adm_tep in student_files#index pass id when user clicked to download the adm-tep in index view of student_files the AltID was called as a param. AltID no longer exists in this model. We are now passing in the id which is now a safe AI integer.

--- a/app/views/student_files/index.html.erb
+++ b/app/views/student_files/index.html.erb
@@ -40,7 +40,7 @@
 
         <% @adm_teps.each do |adm_tep| %>
           <tr>
-            <td><%= link_to(adm_tep.letter_file_name, adm_tep_download_path(adm_tep.AltID)) %></td>
+            <td><%= link_to(adm_tep.letter_file_name, adm_tep_download_path(adm_tep.id)) %></td>
             <td><%= number_to_human_size adm_tep.letter_file_size %></td>
             <td><%= adm_tep.letter_updated_at.strftime("%m/%d/%Y") %></td>   
             <td> Admission to TEP</td>       
