fixed syntactic error application style sheet this error was throwing a SASS compile error in the testing enviornment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -93,7 +93,7 @@ Style for Glyphicons*/
 
 /*h2, h3 {margin-left: 50px;
   color: black;
-  }    /*page headers*/*/
+  }    /*page headers*/
 
 /*hr{ border: 0; height: 1px; background: #ccc; background-image: linear-gradient(to right, #ccc, #333, #ccc); }*/
 
