--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -252,7 +252,7 @@ a:hover { text-decoration: underline; }
     color: black;
   }
 
-  .action-large.{
+  .action-large{
     font-size: 14px;
   }
 
