--- a/app/views/student_files/index.html.erb
+++ b/app/views/student_files/index.html.erb
@@ -43,7 +43,7 @@
 
         <% @adm_sts.each do |adm_st| %>
           <tr>
-            <td><%= link_to(adm_st.letter_file_name, adm_st_download_path(adm_st.AltID)) %></td>
+            <td><%= link_to(adm_st.letter_file_name, adm_st_download_path(adm_st.id)) %></td>
             <td><%= number_to_human_size adm_st.letter_file_size %></td>
             <td><%= adm_st.letter_updated_at.strftime("%m/%d/%Y") %></td>   
             <td> Admission to Student Teaching</td>
