--- a/app/views/adm_st/index.html.erb
+++ b/app/views/adm_st/index.html.erb
@@ -1,3 +1,6 @@
+<%= link_to students_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
 
 <div class="index">
 
