--- a/app/views/clinical_assignments/index.html.erb
+++ b/app/views/clinical_assignments/index.html.erb
@@ -1,3 +1,7 @@
+<%= link_to students_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
+
 <div class="index">
   <% @page_title = "Clinical Sites" %>
   <!-- drop down menu for all terms. Reload page on change -->
