--- a/app/views/clinical_sites/index.html.erb
+++ b/app/views/clinical_sites/index.html.erb
@@ -1,3 +1,7 @@
+<%= link_to students_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
+
 <% @page_title = "Clinical Sites" %>
 
   <table class="listing table table-striped" summary="clinical_sites list">
