--- a/app/views/praxis_results/new.html.erb
+++ b/app/views/praxis_results/new.html.erb
@@ -1,3 +1,7 @@
+<%= link_to students_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
+
 <div class="praxis new">
 
 
