fixed type Frist name -> First Name

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -18,7 +18,7 @@
     <tr>
 
     <tr>
-      <th>Frist Name</th>
+      <th>First Name</th>
       <td><%= @student.FirstName %> <%= @student.PreferredFirst ? "(#{@student.PreferredFirst})" : nil %></td>
     </tr>
 
