corrected typo in prog_exit recommend was misspelled

--- a/app/views/prog_exits/_new_form.html.erb
+++ b/app/views/prog_exits/_new_form.html.erb
@@ -56,7 +56,7 @@
 
 		<tr>
 			<th>
-				<%= f.label :RecommendDate, "Date Recomend Certificaiton"  %>
+				<%= f.label :RecommendDate, "Date Recommend Certification"  %>
 			</th>
 
             <td class="date-admit">
