--- a/app/views/prog_exits/index.html.erb
+++ b/app/views/prog_exits/index.html.erb
@@ -60,7 +60,7 @@
             <th>GPA (Last 60 Credit Hours)</th>          
             <th>Exit Date</th>
             <th>Exit Reason</th>
-            <th>Recomend Date</th>
+            <th>Recommend Date</th>
             <th>Details</th>
 
           </tr>
