--- a/app/views/prog_exits/index.html.erb
+++ b/app/views/prog_exits/index.html.erb
@@ -97,7 +97,7 @@
           } )  %>
 
 
-        <%= link_to("Edit", edit_prog_exit_path(exit.id), :class => "action btn btn-info action-small")%>
+        <%= link_to("Edit", edit_prog_exit_path(exit.AltID), :class => "action btn btn-info action-small")%>
       </td>
 <!-- Edit record -->
 
