fixed typo in clinical_assignments#index corrected spelling for assignments

--- a/app/views/clinical_assignments/index.html.erb
+++ b/app/views/clinical_assignments/index.html.erb
@@ -13,7 +13,7 @@
 
   <table class="listing table table-striped" summary="clinical_assignments list">
     <caption> 
-      <span class="header1"><%= "Clinical Assingments: #{@term.PlainTerm}" %> </span><br>  
+      <span class="header1"><%= "Clinical Assignments: #{@term.PlainTerm}" %> </span><br>  
       <span class="header2"><%= @assignments.size %> found</span>  
         <div class="container">
           <div class="row">
