--- a/app/views/clinical_sites/_form.html.erb
+++ b/app/views/clinical_sites/_form.html.erb
@@ -25,5 +25,25 @@
       <td> <%= f.text_field(:District) %></td>
     </tr>
 
+    <tr>
+      <th> <%= f.label(:phone, "Phone")%> </th>
+      <td> <%= f.text_field(:phone) %> </td>
+    </tr>
+
+    <tr>
+      <th> <%= f.label(:receptionist, "Receptionist")%> </th>
+      <td> <%= f.text_field(:receptionist) %> </td>
+    </tr>
+
+    <tr>
+      <th> <%= f.label(:website, "Website")%> </th>
+      <td> <%= f.text_field(:website) %> </td>
+    </tr>
+
+    <tr>
+      <th> <%= f.label(:email, "Email")%> </th>
+      <td> <%= f.text_field(:email) %> </td>
+    </tr>
+
   </table>
  
