changed view adm_tep#index using new method Student.praxisI_pass in view

--- a/app/views/adm_tep/index.html.erb
+++ b/app/views/adm_tep/index.html.erb
@@ -59,7 +59,7 @@
       <td><%=app.GPA %></td>
       <td><%=app.GPA_last30%></td>
       <td>
-        <% if praxisI_pass(student) %> 
+        <% if student.praxisI_pass %> 
           <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> 
 
         <% else %>
