changed AltID to id in #index view

--- a/app/views/clinical_assignments/index.html.erb
+++ b/app/views/clinical_assignments/index.html.erb
@@ -43,7 +43,7 @@
       <td class="actions">
 
       <!-- edit assignment-->
-          <%= link_to edit_clinical_assignment_path(assignment.AltID), :class => "btn btn-info action-small" do %>
+          <%= link_to edit_clinical_assignment_path(assignment.id), :class => "btn btn-info action-small" do %>
                 <span class="small-btn-text">Edit
                 </span>
               <% end %>
